# voisus-sdk-examples

./: .gitignore  LICENSE  README.md
C#/: README.md  VoisusCS.sln
C#/ConsoleApplication1/: ConsoleApplication.csproj  Program.cs
C#/ConsoleApplication1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
C#/VoisusCS/: VRCC.cs  VRCCEnumDefs.cs  VRCCException.cs  VRCCStructs.cs  VoisusCS.csproj
C#/VoisusCS/Properties/: AssemblyInfo.cs  Settings.Designer.cs
C++/: CMakeLists.txt  README  README.md  VRCClient.lib  voisus-sdk-example.cpp  vrc_types.h  vrcc.h
C++/voisus-sdk-example/: ReadMe.txt  Voisus.cpp  Voisus.h  stdafx.cpp  stdafx.h  voisus-sdk-example.cpp  voisus-sdk-example.h  voisus-sdk-example.sln  voisus-sdk-example.vcxproj  voisus-sdk-example.vcxproj.filters
